-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.0
-
None
Using the attached qml, clicking anywhere will cause a particle to drop from the center of the application.
When the app has first started, clicking twice often causes the particles to not disappear when their lifespan has ended.
Usually the second particle remains, half opaque, until another particle is created.
Doesn't tend to occur again afterwards.
For Gerrit Dashboard: QTBUG-20437 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
2074,3 | Manage m_activeCount centrally | master | qt/qtdeclarative | Status: MERGED | +2 | 0 |