Manage m_activeCount centrally

Fixes issue where it wasn't being managed right and kept going negative.
This commit also adds setVisible in a few places missed by the last
change.

Task-number: QTBUG-20437
Change-Id: I4efaab7b34784dfbc42dd1acd0a5be3b38a8605a
Reviewed-on: http://codereview.qt.nokia.com/2074
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Alan Alpert <alan.alpert@nokia.com>